# DSE2024

./: .gitignore  README.md  docker-compose.yml
Dashboard/: angular.json
beachcomb-service/: Dockerfile-beachcomb  pom.xml
dashboard/: Dockerfile  README.md  angular.json  angular_prod.json  docker-compose.yml  nginx.conf  package-lock.json  package.json
dashboard/src/: config.ts
dashboard/src/app/: app.component.css  app.component.html  app.component.ts  app.routes.ts  (+5 more)
datafeeder/: Dockerfile-datafeeder  README.md  build.gradle  docker-compose.yaml  pom.xml  settings.gradle
k8s/: beachcomb-service-service.yaml  beachcomb_deployment.yaml  beachcomb_service.yaml  control_deployment.yaml  control_service.yaml  dashboard_deployment.yaml  dashboard_service.yaml  dse2024-ingress.yaml  dse2024_ingress.yaml  inventory_deployment.yaml  inventory_service.yaml  rabbitmq_deployment.yaml  rabbitmq_service.yaml
k8s_test/: beachcomb-service-deployment.yaml  dse2024-ingress.yaml
python-services/: Dockerfile-control  Dockerfile-inventory  pyproject.toml
python-services/python_services/common/: config.py  log_config.py  models.py
python-services/python_services/common/exception/: ClientException.py
python-services/python_services/control_service/: api.py  beachcomb_client.py  database.py  dbplan.txt  inventory_client.py  jobs.py  main.py  rabbitmq.py  requests.py
python-services/python_services/inventory_service/: api.py  main.py
python-services/stuff/: rabbit_2.py  rabbit_test_script.py
python-services/tests/inventory_service/: test_inventory_module.py
(+62 files in other folders)
