[tool.poetry]
name = "python-services"
version = "0.1.0"
description = ""
authors = ["Alexander Keusch <alex@keusch.one>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
colorlog = "^6.8.2"
pymongo = "^4.7.1"
pika = "^1.3.2"
requests = "^2.31.0"
schedule = "^1.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
